--- a/styles/modules/menu.css
+++ b/styles/modules/menu.css
@@ -33,7 +33,7 @@ nav::-webkit-scrollbar {
         transform 0.2s;
     font-size: 1rem;
     font-weight: bold;
-    text-align: centre;
+    text-align: center;
 }
 
 .menu-button:hover {
