--- a/styles/modules/rss.css
+++ b/styles/modules/rss.css
@@ -114,7 +114,7 @@
         background 0.17s,
         color 0.2s;
     display: flex;
-    align-items: centre;
+    align-items: center;
     gap: 8px;
 }
 
