--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,7 +16,7 @@
 @import url("./modules/menu.css");
 
 @import url("./modules/chat.css");
-@import url("./modules/modal.editMessage.css");
+@import url("./modules/modals.css");
 
 @import url("./modules/reader.css");
 @import url("./modules/reader.mode.css");
