--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,7 +19,7 @@
 @import url("./modules/modals.css");
 
 @import url("./modules/reader.css");
-@import url("./modules/reader.mode.css");
+@import url("./modules/reader-mode.css");
 @import url("./modules/readAloud.css");
 @import url("./modules/chapterImages.css");
 @import url("./modules/tategaki.css");
